use consul-template for populating env

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,10 @@
-SLACK_TOKEN=go-get-from-slack!
-DATABASE_URL=postgresql://localhost/standup_bot_development
+SLACK_TOKEN=ask_a_slack_admin
+DB_HOST=db.us-east-1.rds.amazonaws.com
+DB_NAME=standup
+DB_USER=slackup
+DB_PASS=foobah
+TIMEZONE=America/New_York
+LOG_LEVEL=10
 PORT=3000
 TIMEZONE=America/New_York
 LOG_LEVEL=10
