--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,8 @@ services:
     entrypoint: /app/entrypoint.sh
     environment:
       - SLACK_TOKEN=${SLACK_TOKEN}
-      - DATABASE_URL=postgres://${DB_USER}:${DB_PASS}@{DB_HOST}/{DB_NAME}
+      - DATABASE_HOST=${DB_HOST}:5432
+      - DATABASE_URL=postgres://${DB_USER}:${DB_PASS}@${DB_HOST}/${DB_NAME}
       - LOG_LEVEL=10
     logging:
       driver: awslogs
